--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     env_file:
       - .env
     command: >
-      sh -c "python manage.py makemigrations &&
+      sh -c "python manage.py collectstatic --noinput &&
+             python manage.py makemigrations &&
              python manage.py migrate &&
-             python manage.py collectstatic --noinput &&
-             gunicorn chathf.wsgi:application --bind 0.0.0.0:8000"
+             gunicorn --bind 0.0.0.0:8000 chathf.wsgi:application"
     volumes:
       - .:/app
       - static_volume:/static
@@ -25,6 +25,8 @@ services:
       # Hugging Face
       HF_HOME: /app/hf_models
       HUGGINGFACE_HUB_TOKEN: ${HF_TOKEN}
+
+    gpus: all
 
   db:
     image: postgres:15
