include: reparacion de procesado de respuestas del modelo ARCH-ROUTER

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       sh -c "python manage.py makemigrations &&
              python manage.py migrate &&
              python manage.py collectstatic --noinput &&
-             gunicorn chathf.wsgi:application --bind 0.0.0.0:8000"
+             gunicorn chathf.wsgi:application --bind 0.0.0.0:8000  --workers 3 --timeout 180"
     volumes:
       - .:/app
       - static_volume:/static
