include: Funcionalidades de router asociadas al modelo de NLP categoria QA añadidas

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       HF_HOME: /app/hf_models
       HUGGINGFACE_HUB_TOKEN: ${HF_TOKEN}
 
-    gpus: all
+    # gpus: all
 
   db:
     image: postgres:15
